--- a/Makefile_config
+++ b/Makefile_config
@@ -62,6 +62,7 @@ MAKEFILE_BUILD_CONFIGS = $(MAKEFILE_BUILD_CONFIG_RELEASE) $(MAKEFILE_BUILD_CONFI
 
 $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 	@echo "Gathering build environment information ..."
+	@rm -f $(TOP_DIR)/config_success
 	@echo "wxWidgets ..."
 	@(set -e ;\
 		get() { \
@@ -82,7 +83,10 @@ $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 		};\
 		conf=--debug=no;  get > $(MAKEFILE_BUILD_CONFIG_RELEASE) ;\
 		conf=--debug=yes; get > $(MAKEFILE_BUILD_CONFIG_DEBUG)   ;\
+		touch $(TOP_DIR)/config_success ;\
 	)
+	@if [ ! -f $(TOP_DIR)/config_success ]; then echo "error: wxWidgets configuration failed."; rm -f $(MAKEFILE_BUILD_CONFIGS); exit 1; fi
+	@rm -f $(TOP_DIR)/config_success
 	@echo "zlib ..."
 	@(set -e ;\
 		echo "####  zlib config  ####" ;\
@@ -90,7 +94,10 @@ $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 		echo "ZLIB_CFLAGS   := -I$(ZLIB_DIR)/include" ;\
 		echo "ZLIB_CXXFLAGS := -I$(ZLIB_DIR)/include" ;\
 		echo "ZLIB_CPPFLAGS := -I$(ZLIB_DIR)/include" ;\
+		touch $(TOP_DIR)/config_success ;\
 	) | tee -a $(MAKEFILE_BUILD_CONFIG_RELEASE) >> $(MAKEFILE_BUILD_CONFIG_DEBUG)
+	@if [ ! -f $(TOP_DIR)/config_success ]; then echo "error: zlib configuration failed."; rm -f $(MAKEFILE_BUILD_CONFIGS); exit 1; fi
+	@rm -f $(TOP_DIR)/config_success
 	@echo "libtomcrypt ..."
 	@(set -e ;\
 		echo "####  libtomcrypt config  ####" ;\
@@ -98,7 +105,10 @@ $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 		echo "LIBTOMCRYPT_CXXFLAGS := -I$(LIBTOMCRYPT_DIR)/include" ;\
 		echo "LIBTOMCRYPT_CPPFLAGS := -I$(LIBTOMCRYPT_DIR)/include" ;\
 		echo "LIBTOMCRYPT_LIBS := -L$(LIBTOMCRYPT_DIR)/lib -ltomcrypt" ;\
+		touch $(TOP_DIR)/config_success ;\
 	) | tee -a $(MAKEFILE_BUILD_CONFIG_RELEASE) >> $(MAKEFILE_BUILD_CONFIG_DEBUG)
+	@if [ ! -f $(TOP_DIR)/config_success ]; then echo "error: libtomcrypt configuration failed."; rm -f $(MAKEFILE_BUILD_CONFIGS); exit 1; fi
+	@rm -f $(TOP_DIR)/config_success
 	@echo "freetype ..."
 	@(set -e ;\
 		get() { \
@@ -112,9 +122,33 @@ $(MAKEFILE_BUILD_CONFIGS) : $(TOP_DIR)/Makefile_config $(WXWIDGETS_CONFIG)
 			echo  -n "FREETYPE_LIBS := " ;\
 				$(FREETYPE_CONFIG) $(FREETYPE_CONFIG_ARG) --libs ;\
 		};\
-		get \
+		get ;\
+		touch $(TOP_DIR)/config_success ;\
 	) | tee -a $(MAKEFILE_BUILD_CONFIG_RELEASE) >> $(MAKEFILE_BUILD_CONFIG_DEBUG)
-	
+	@if [ ! -f $(TOP_DIR)/config_success ]; then echo "error: freetype configuration failed."; rm -f $(MAKEFILE_BUILD_CONFIGS); exit 1; fi
+	@rm -f $(TOP_DIR)/config_success
+	@echo "boost ..."
+	@(set -e ;\
+		get() { \
+			boost_include_dir=`echo $(BOOST_DIR)/include/boost-*`  ;\
+			if [ `echo $$boost_include_dir | wc -w` -gt 1 ]; then \
+				echo "error: multiple directories in $(BOOST_DIR)/include . " 1>&2 ;\
+				echo " did you installed multiple versions of boost library ? " 1>&2 ;\
+				echo "(shoud be one version in 'external' directory)"  1>&2 ;\
+				exit 1; \
+			fi ;\
+			boost_lib_dir=$(BOOST_DIR)/lib                  ;\
+			echo "####  boost config ####"                  ;\
+			echo  "BOOST_CFLAGS   := -I$$boost_include_dir" ;\
+			echo  "BOOST_CXXFLAGS := -I$$boost_include_dir" ;\
+			echo  "BOOST_CPPFLAGS := -I$$boost_include_dir" ;\
+			echo  "BOOST_LIBS     := -L$$boost_lib_dir"     ;\
+		};\
+		get ;\
+		touch $(TOP_DIR)/config_success ;\
+	) | tee -a $(MAKEFILE_BUILD_CONFIG_RELEASE) >> $(MAKEFILE_BUILD_CONFIG_DEBUG)
+	@if [ ! -f $(TOP_DIR)/config_success ]; then echo "error: boost configuration failed."; rm -f $(MAKEFILE_BUILD_CONFIGS); exit 1; fi
+	@rm -f $(TOP_DIR)/config_success
 
 ifeq ($(DEBUG),yes)
  -include $(TOP_DIR)/Makefile_build_config_debug
