外部依存ライブラリの展開時のメッセージを簡潔に
boost の jam が MSYS のインストールされている場所によっては正常にビルド出来ない不具合を回避 (MSYSのバグ？)

ビルドに失敗する確率の高い boost (とそれが依存している icu ) をビルドのはじめの方に

# 実際は wxWidgets もかなりビルドに失敗する確率が高いかも

Refs #6

--- a/external/Makefile
+++ b/external/Makefile
@@ -3,7 +3,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 # サブディレクトリの定義
 
-SUBLIBS= zlib libpng libjpeg expat wxWidgets icu libtomcrypt freetype boost
+SUBLIBS= icu boost zlib libpng libjpeg expat wxWidgets libtomcrypt freetype 
 
 
 # デフォルトターゲット
