--- a/src/core/tjs3/Makefile_for_user
+++ b/src/core/tjs3/Makefile_for_user
@@ -8,6 +8,7 @@ $(TJS3_LIB):
 TJS3_CXXFLAGS := $(shell $(TJS3_DIR)/bin/tjs3-config --cxxflags)
 TJS3_CPPFLAGS := $(shell $(TJS3_DIR)/bin/tjs3-config --cppflags)
 TJS3_LIBS     := $(shell $(TJS3_DIR)/bin/tjs3-config --libs)
+TJS3_LINKDEPS := $(shell $(TJS3_DIR)/bin/tjs3-config --linkdeps)
 
 ifneq ($(filter WX,$(DEP_LIBS)),WX)
  DEP_LIBS += WX
@@ -15,6 +16,7 @@ endif
 CXXFLAGS += $(TJS3_CXXFLAGS)
 CPPFLAGS += $(TJS3_CPPFLAGS)
 LIBS     += $(TJS3_LIBS)
+BIN_DEPS += $(TJS3_LINKDEPS)
 
 $(TJS3_LIB)/Makefile_for_user: $(TJS3_LIB)
 
