吉里吉里３の内部名称が TVP3 から Risa に変わったことを受けて識別子やファイル名など変更。
コアの内部名称が Risa [りさ] になったところで、このソフトウェア群全体を吉里吉里３と呼ぶ呼び名が無くなることはおそらく無い (これからも吉里吉里３と呼び続けると思われる)。

--- a/tests/fstest/Makefile
+++ b/tests/fstest/Makefile
@@ -54,7 +54,7 @@ CPPFILES = \
 		$(BASE_DIR)/fs/xp4fs/XP4Stream.cpp          \
 		$(BASE_DIR)/fs/xp4fs/XP4StreamCache.cpp     \
 		$(BASE_DIR)/fs/xp4fs/XP4FSBind.cpp          \
-		$(BASE_DIR)/exception/TVPException.cpp      \
+		$(BASE_DIR)/exception/RisaException.cpp      \
 		$(BASE_DIR)/script/RisseEngine.cpp            \
 		main.cpp
 
