--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -17,6 +17,8 @@ LIBPNG_DIR=$(EXTERNAL_DIR)/libpng
 LIBTOMCRYPT_DIR=$(EXTERNAL_DIR)/libtomcrypt
 WXWIDGETS_DIR=$(EXTERNAL_DIR)/wxWidgets
 ZLIB_DIR=$(EXTERNAL_DIR)/zlib
+LIBOGG_DIR=$(EXTERNAL_DIR)/libogg
+LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
 
 
 ###### ビルド出力先
