シングルトン管理クラスを、シングルトンクラスのコンストラクタ中で起こった例外を捕捉できるように改良

--- a/tests/fstest/Makefile
+++ b/tests/fstest/Makefile
@@ -54,8 +54,9 @@ CPPFILES = \
 		$(BASE_DIR)/fs/xp4fs/XP4Stream.cpp          \
 		$(BASE_DIR)/fs/xp4fs/XP4StreamCache.cpp     \
 		$(BASE_DIR)/fs/xp4fs/XP4FSBind.cpp          \
-		$(BASE_DIR)/exception/RisaException.cpp      \
-		$(BASE_DIR)/script/RisseEngine.cpp            \
+		$(BASE_DIR)/exception/RisaException.cpp     \
+		$(BASE_DIR)/script/RisseEngine.cpp          \
+		$(CORE_DIR)/utils/Singleton.cpp             \
 		main.cpp
 
 OBJS = $(CPPFILES:.cpp=.o)
