--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -19,6 +19,7 @@ WXWIDGETS_DIR=$(EXTERNAL_DIR)/wxWidgets
 ZLIB_DIR=$(EXTERNAL_DIR)/zlib
 LIBOGG_DIR=$(EXTERNAL_DIR)/libogg
 LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
+OPENAL_DIR=$(EXTERNAL_DIR)/openal
 
 
 ###### ビルド出力先
