Freeverb によるリバーブ(残響音)フィルタの追加。
Freeverb は public domain なリバーブの実装。本家サイトが落ちてるようだが入手はosdev-jのwikiから。

とりあえずこのフィルタにはいろいろ問題があって

 * 入力フィルタが終わるとこのフィルタも終わってしまう(残響音が消えるまで待たない)
 * 残響音 *しか* 出力されない様子？ (directが入ってない)
 * ステレオ入力しか受け付けてくれない(ヴォイスにリバーブを掛ける用途を考えるとモノラルも受け付けたい)
 * パラメータが固定(変えられるようにプロパティをもてるといいな)
 * 44.1khz 入力にしか対応していない


リバーブとしての動作・クオリティやCPU負荷は満足できると思う。

--- a/tests/openaltest/Makefile
+++ b/tests/openaltest/Makefile
@@ -42,7 +42,8 @@ INCLUDES= \
 		-I$(CORE_DIR)/sound/decoder/riffwave   \
 		-I$(CORE_DIR)/sound/decoder/vorbis     \
 		-I$(CORE_DIR)/sound/filter             \
-		-I$(CORE_DIR)/sound/filter/pitchshifter\
+		-I$(CORE_DIR)/sound/filter/phasevocoder\
+		-I$(CORE_DIR)/sound/filter/reverb      \
 		-I.
 
 CPPFILES = \
@@ -73,8 +74,13 @@ CPPFILES = \
 		$(CORE_DIR)/sound/decoder/riffwave/RIFFWaveDecoder.cpp       \
 		$(CORE_DIR)/sound/decoder/vorbis/VorbisDecoder.cpp           \
 		$(CORE_DIR)/sound/filter/BasicWaveFilter.cpp                 \
-		$(CORE_DIR)/sound/filter/pitchshifter/smbPitchShift.cpp      \
-		$(CORE_DIR)/sound/filter/pitchshifter/PitchShifter.cpp       \
+		$(CORE_DIR)/sound/filter/phasevocoder/chuck_fft.cpp          \
+		$(CORE_DIR)/sound/filter/phasevocoder/PhaseVocoder.cpp       \
+		$(CORE_DIR)/sound/filter/phasevocoder/PitchShifter.cpp       \
+		$(CORE_DIR)/sound/filter/reverb/fv_allpass.cpp               \
+		$(CORE_DIR)/sound/filter/reverb/fv_comb.cpp                  \
+		$(CORE_DIR)/sound/filter/reverb/fv_revmodel.cpp              \
+		$(CORE_DIR)/sound/filter/reverb/Reverb.cpp                   \
 		main.cpp
 
 OBJS = $(CPPFILES:.cpp=.o)
