Phase Vocoder の実装を追加。
結局自分で書いた。

DSPはちょっと不完全。

 * スケールを行うと高音があまり出なくなる (overlap時の処理の問題？)

フィルタの方も不完全。

 * そもそもピッチやタイムスケールを動的に変えられない
 * 最適化が不完全
 * イベントや再生位置情報を捨ててしまうので捨てないようにしないといけない

そのほか、細かい修正。

--- a/tests/openaltest/Makefile
+++ b/tests/openaltest/Makefile
@@ -65,6 +65,7 @@ CPPFILES = \
 		$(CORE_DIR)/base/fs/xp4fs/XP4FSBind.cpp                      \
 		$(CORE_DIR)/base/exception/RisaException.cpp                 \
 		$(CORE_DIR)/base/script/RisseEngine.cpp                      \
+		$(CORE_DIR)/utils/fftsg.cpp                                  \
 		$(CORE_DIR)/utils/Singleton.cpp                              \
 		$(CORE_DIR)/sound/WaveFormatConverter.cpp                    \
 		$(CORE_DIR)/sound/WaveLoopManager.cpp                        \
@@ -74,14 +75,14 @@ CPPFILES = \
 		$(CORE_DIR)/sound/decoder/riffwave/RIFFWaveDecoder.cpp       \
 		$(CORE_DIR)/sound/decoder/vorbis/VorbisDecoder.cpp           \
 		$(CORE_DIR)/sound/filter/BasicWaveFilter.cpp                 \
-		$(CORE_DIR)/sound/filter/phasevocoder/chuck_fft.cpp          \
 		$(CORE_DIR)/sound/filter/phasevocoder/PhaseVocoder.cpp       \
-		$(CORE_DIR)/sound/filter/phasevocoder/PitchShifter.cpp       \
+		$(CORE_DIR)/sound/filter/phasevocoder/PhaseVocoderDSP.cpp    \
 		$(CORE_DIR)/sound/filter/reverb/fv_allpass.cpp               \
 		$(CORE_DIR)/sound/filter/reverb/fv_comb.cpp                  \
 		$(CORE_DIR)/sound/filter/reverb/fv_revmodel.cpp              \
 		$(CORE_DIR)/sound/filter/reverb/Reverb.cpp                   \
 		main.cpp
+
 
 OBJS = $(CPPFILES:.cpp=.o)
 
