いろいろ改良。
 * tRisaWaveEvent と tRisaWaveSegment の管理を tRisaWaveSegmentQueue でカプセル化
 * tRisaWaveFileInfo と tRisaWaveFormat の分離と PCM 形式を tRisaPCMTypes::tType で表すように
 * SuggestFormat メソッドにより、後段のフィルタから前段のフィルタやデコーダに PCM 形式の提案が出来るように
 * Vorbisデコーダが提案に従って float 形式の PCM を返すことが出来るように
 * Reverb フィルタや Phase Vocoder フィルタが前段に対して float 形式を提案するように (これらのフィルタは内部的には float で演算しているので、前段のフィルタやデコーダが float で返せるならば都合がよい )

--- a/tests/openaltest/Makefile
+++ b/tests/openaltest/Makefile
@@ -72,6 +72,7 @@ CPPFILES = \
 		$(CORE_DIR)/sound/ALCommon.cpp                               \
 		$(CORE_DIR)/sound/ALSource.cpp                               \
 		$(CORE_DIR)/sound/ALBuffer.cpp                               \
+		$(CORE_DIR)/sound/WaveSegmentQueue.cpp                       \
 		$(CORE_DIR)/sound/decoder/riffwave/RIFFWaveDecoder.cpp       \
 		$(CORE_DIR)/sound/decoder/vorbis/VorbisDecoder.cpp           \
 		$(CORE_DIR)/sound/filter/BasicWaveFilter.cpp                 \
