--- a/src/tools/krkrfont/Makefile
+++ b/src/tools/krkrfont/Makefile
@@ -20,6 +20,8 @@ default: $(BIN)
 
 #----------------------------#
 
+INCLUDES = -I.
+
 XRCFILES = krkrfont_res.xrc
 
 CPPFILES =  $(XRCFILES:.xrc=.cpp) \
