--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -13,10 +13,11 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/sound              
 
 # makefile のあるサブディレクトリの定義
+# (順番に注意)
 
 SUB_DIRS=\
-	$(SUBSYS_DIRS)                 \
 	$(CORE_DIR)/risse              \
+	$(SUBSYS_DIRS)                 \
 	$(CORE_DIR)/main
 
 
