--- a/src/core/base/fs/Makefile
+++ b/src/core/base/fs/Makefile
@@ -6,7 +6,7 @@ CORE_DIR=../..
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
 #-----------------------------------------
-include $(CORE_DIR)/Makefile_core_pre
+include $(CORE_DIR)/Makefile_core_subsys_pre
 
 
 #-----------------------------------------
@@ -34,5 +34,5 @@ CPPFILES = \
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
 #-----------------------------------------
-include $(CORE_DIR)/Makefile_core_post
+include $(CORE_DIR)/Makefile_core_subsys_post
 
