wxCriticalSection はプラットフォームによっては再突入できない (recursiveではない) Σ（゜д゜lll）
なので、win32 では CRITICAL_SECTION を、それ以外では boost::recursive_mutex を使用するように変更

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -2,7 +2,7 @@ TOP_DIR=$(CORE_DIR)/../..
 
 include $(TOP_DIR)/Makefile_filenames
 
-# subsys.a のあるサブディレクトリの定義
+# subsys.o のある(subsys.oが作成される)サブディレクトリの定義
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/exception     \
