--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -14,7 +14,7 @@ Risse_BIN_OUTPUT_DIR := $(CURRENT_DIR)/bin
 BIN=$(Risse_LIB_OUTPUT_DIR)/librisse.a
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=WX
+DEP_LIBS=BOOST WX
 
 # 最終ターゲット (ふつう、出力バイナリや出力ライブラリ)
 default: $(BIN)
@@ -75,14 +75,22 @@ INCLUDES = -Iinclude
 
 Risse_INCLUDE_DIR := $(shell pwd)/include
 
-$(Risse_BIN_OUTPUT_DIR)/risse-config: Makefile risse-config.in
+# risse-config を作成する。
+# boost ライブラリを使っているかどうかは、依存関係ファイルの中に
+# 特定の文字列があるかどうかで判断する。
+
+$(Risse_BIN_OUTPUT_DIR)/risse-config: Makefile risse-config.in src/risseUtils.d
 	mkdir -p $(Risse_BIN_OUTPUT_DIR)
-	sed risse-config.in \
-		-e 's|@LIBS@|"-L$(Risse_LIB_OUTPUT_DIR) -lrisse"|' \
-		-e 's|@CXXFLAGS@|"-I$(Risse_INCLUDE_DIR) $(CXXFLAGS)"|' \
-		-e 's|@CPPFLAGS@|"-I$(Risse_INCLUDE_DIR) $(CXXFLAGS)"|' \
-		-e 's|@LINKDEPS@|"$(BIN)"|' \
-		  > $(Risse_BIN_OUTPUT_DIR)/risse-config
+	(set -e ;\
+		threads=""; \
+		if [ `grep -c "boost/thread.hpp" src/risseUtils.d` != 0 ]; then threads="$(BOOST_LIBS) -lboost_thread-gcc-mt"; fi; \
+		sed risse-config.in \
+			-e "s|@LIBS@|\"-L$(Risse_LIB_OUTPUT_DIR) -lrisse $$threads\"|" \
+			-e "s|@CXXFLAGS@|\"-I$(Risse_INCLUDE_DIR) $(CXXFLAGS)\"|" \
+			-e "s|@CPPFLAGS@|\"-I$(Risse_INCLUDE_DIR) $(CXXFLAGS)\"|" \
+			-e "s|@LINKDEPS@|\"$(BIN)\"|" \
+			  > $(Risse_BIN_OUTPUT_DIR)/risse-config \
+	)
 	chmod +x $(Risse_BIN_OUTPUT_DIR)/risse-config
 
 BIN_DEPS = $(Risse_BIN_OUTPUT_DIR)/risse-config
