コンソールのモジュールのファイル配置を変更
src/core/base/ui 以下に console を作成、そこに配置。

ui 以下には editor (スクリプトエディタ) 等、補助的な UI の実装が入る予定。

--- a/src/core/base/ui/Makefile
+++ b/src/core/base/ui/Makefile
@@ -12,7 +12,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES = \
-		Log.cpp                 
+		console/LogViewer.cpp       \
+		console/Console.cpp         
 
 
 #-----------------------------------------
