--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -9,6 +9,7 @@ SUBSYS_DIRS=\
 	$(CORE_DIR)/base/fs            \
 	$(CORE_DIR)/base/log           \
 	$(CORE_DIR)/base/script        \
+	$(CORE_DIR)/base/ui            \
 	$(CORE_DIR)/base/utils         \
 	$(CORE_DIR)/sound              
 
