シングルトン関連を大幅に書き直し。
wxWidgets には wxModule という、シングルトンぽい物を実現する機構があるが、wxApp::OnInit よりも前に初期化され、 wxApp::OnExit よりも後に消滅する。これは main 関数を抜ける頃にはすでにwxModule由来のシングルトンクラスは死んでいるということになる。

Risaのシングルトンの中には wxWidgets に依存している物があり、これらは消滅順においてはwxApp::OnExit よりも前に消滅しなければならない。従来のシングルトンクラスでは消滅は main 関数よりも後になっていたので、消滅のタイミングも制御できるように書き換える必要があった。

シングルトンクラスの使い方については Singleton.h を参照。

他、細かい修正

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -27,6 +27,9 @@ SUB_DIRS=\
 # このバイナリが依存しているライブラリ
 DEP_LIBS=BOOST ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON
 
+# 追加の CFLAGS
+CXXFLAGS += -DBOOST_ENABLE_ASSERT_HANDLER
+
 # pre-compiled header 用ファイル
 PREC_H_NAME = $(CURRENT_DIR)/$(CORE_DIR)/prec.h
 
@@ -35,7 +38,7 @@ include $(TOP_DIR)/src/core/risse/Makefile_for_user
 
 # INCLUDES の設定
 INCLUDES = \
-		-I$(CURRENT_DIR)/$(CORE_DIR)                             \
+		-I$(CURRENT_DIR)/$(CORE_DIR)
 
 
 
